try fix grid on mobile
ref #313

--- a/src/FilterLists.Web/ClientApp/css/site.css
+++ b/src/FilterLists.Web/ClientApp/css/site.css
@@ -9,6 +9,10 @@ body, h2, h3, h4, h5, blockquote {
     align-items: center;
 }
 
+.rt-thead.-header, .rt-thead.-filters, .rt-tbody {
+    min-width: 350px;
+}
+
 .fl-btn-details-action {
     margin-bottom: .2rem;
     max-width: 90px;
